--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <script>
         var img = new Image();
+        img.onload = function() {
+            window.location.href = "https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp";
+        };
+        img.onerror = function() {
+            window.location.href = "https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp";
+        };
         img.src = "http://www.amazon.es/tryprimefree?tag=kelonio-21";
-        window.location.href = "https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp";
     </script>
 </head>
 <body>
