--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script>
         setTimeout(function() {
             window.location.href = "https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp";
-        }, 500);
+        }, 2000); // Aumentado a 2 segundos
     </script>
 </head>
 <body>
