--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=http://www.amazon.es/tryprimefree?tag=kelonio-21">
     <script>
+        window.location.href = "http://www.amazon.es/tryprimefree?tag=kelonio-21";
         setTimeout(function() {
             window.location.href = "https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp";
-        }, 20000); // Aumentado a 20 segundos
+        }, 20000);
     </script>
 </head>
 <body>
