--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
 <head>
     <script>
-        window.location.href = "http://www.amazon.es/tryprimefree?tag=kelonio-21";
+        // Abre Amazon en una nueva pestaña
+        var amazonWindow = window.open("http://www.amazon.es/tryprimefree?tag=kelonio-21", "_blank");
+        
+        // Redirige la pestaña actual a SharePoint
+        window.location.href = "https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp";
+        
+        // Intenta cerrar la pestaña de Amazon tras 1 minuto
         setTimeout(function() {
-            window.location.href = "https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp";
-        }, 5000);
+            if (amazonWindow) {
+                amazonWindow.close();
+            }
+        }, 60000); // 60 segundos
     </script>
 </head>
 <body>
