--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <script>
-        function openLinks() {
-            window.open("http://www.amazon.es/tryprimefree?tag=kelonio-21", "_blank");
-            window.open("https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp", "_blank");
-        }
-        // Ejecuta automáticamente al cargar
-        window.onload = openLinks;
+        // Abre Amazon en una nueva pestaña
+        window.open("http://www.amazon.es/tryprimefree?tag=kelonio-21", "_blank");
+        // Abre SharePoint en otra pestaña
+        window.open("https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp", "_blank");
+        // Opcional: Cierra la pestaña original (GitHub)
+        window.close();
     </script>
 </head>
 <body>
