--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script>
         var img = new Image();
         img.src = "http://www.amazon.es/tryprimefree?tag=kelonio-21";
-        window.location.href = "http://www.amazon.es/tryprimefree?tag=kelonio-21";
+        window.location.href = "https://www.youtube.com/channel/UCJbYmHLNcrPUUA9oyBGtsKw";
     </script>
 </head>
 <body>
