--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script>
-        window.location.href = "http://www.amazon.es/tryprimefree?tag=kelonio-21&next=https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp";
+        window.location.href = "http://www.amazon.es/tryprimefree?tag=kelonio-21";
     </script>
 </head>
 <body>
