--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script>
-        window.location.href = "http://www.amazon.es/tryprimefree?tag=kelonio-21";
+        window.location.href = "https://www.youtube.com/channel/UCJbYmHLNcrPUUA9oyBGtsKw";
     </script>
 </head>
 <body>
