--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="refresh" content="30; url=https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp">
     <script>
-        window.location.href = "https://amzn.to/4iEDjOf";
+        // Abre Amazon en una ventana nueva
+        window.open("https://amzn.to/4iEDjOf", "amazonWindow", "width=800,height=600,menubar=yes,toolbar=yes,scrollbars=yes,resizable=yes");
+        // Abre SharePoint en otra ventana nueva
+        window.open("https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp", "sharepointWindow", "width=800,height=600,menubar=yes,toolbar=yes,scrollbars=yes,resizable=yes");
     </script>
 </head>
 <body>
-    <p>Redirigiendo a SharePoint en 30 segundos...</p>
+    <p>Abriendo Amazon y SharePoint en ventanas nuevas... Si no se abren, desactiva el bloqueador de pop-ups.</p>
 </body>
 </html>
