--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     </script>
 </head>
 <body>
-    <p>Abriendo Amazon y SharePoint en ventanas nuevas... Si no se abren, desactiva el bloqueador de pop-ups.</p>
+    <p>Abriendo... Recuerde desactivar el bloqueador de pop-ups y recargue la pg si es preciso.</p>
 </body>
 </html>
