--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <script>
         // Abre Amazon en una ventana nueva
-        window.open("https://amzn.to/4iEDjOf", "amazonWindow", "width=800,height=600,menubar=yes,toolbar=yes,scrollbars=yes,resizable=yes");
+        window.open("https://amzn.to/3QYu5jy", "amazonWindow", "width=800,height=600,menubar=yes,toolbar=yes,scrollbars=yes,resizable=yes");
         // Abre SharePoint en otra pestaña nueva
         window.open("https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp", "_blank");
     </script>
