--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         window.open("https://discord.gg/8Fv8GDg", "_blank");
       
         // Abre Amazon Prime en otra pestaña nueva
-        window.open("hhttps://amzn.to/3DSlb4e", "_blank");
+        window.open("https://amzn.to/3DSlb4e", "_blank");
 
         // Abre SharePoint en otra pestaña nueva
         window.open("https://8wb0d8-my.sharepoint.com/:f:/g/personal/kelonio_levelt_me1/EtKNyeMJcSROlHJ_k7DgC6MBm9qbkJPDt_qcBANg8CL6gg?e=gCJGsp", "_blank");
